# ros_erle_spider

./: README.md
spider_code/demos/: CMakeLists.txt  README.md  package.xml
spider_code/demos/src/: demo1.py
spider_code/joy/: package.xml
spider_code/orocos_kdl/: package.xml
spider_code/spider_body_kinematics/: CMakeLists.txt  README.md  package.xml
spider_code/spider_body_kinematics/src/: body_kinematics.cpp  body_kinematics.hpp
spider_code/spider_gait/: CMakeLists.txt  README.md  package.xml
spider_code/spider_gait/src/: gait_kinematics.cpp  gait_kinematics.hpp
spider_code/spider_imu/: CMakeLists.txt  README.md  package.xml
spider_code/spider_imu/src/: imu_control.cpp  imu_control.hpp
spider_code/spider_imu_dev/: CMakeLists.txt  package.xml
spider_code/spider_imu_dev/src/: Imu_control.cpp  Imu_control.hpp
spider_code/spider_joint_publisher/: CMakeLists.txt  README.md  package.xml
spider_code/spider_joint_publisher/src/: joint_publisher.cpp
spider_code/spider_leg_kinematics/: CMakeLists.txt  README.md  package.xml
spider_code/spider_leg_kinematics/src/: leg_ik_service.cpp  leg_ik_service.hpp  leg_kinematics_pub.cpp
spider_code/spider_maestro_controller/: CMakeLists.txt  package.xml
spider_code/spider_maestro_controller/src/: controller_sub.cpp  controller_sub.hpp
spider_code/spider_msgs/: CMakeLists.txt  package.xml
spider_code/spider_msgs/msg/: LegIKRequest.msg  LegsJointsState.msg
spider_code/spider_msgs/srv/: AddTwoInts.srv~  GetLegIKSolver.srv  GetLegIKSolver.srv~
spider_code/spider_teleop_joy/: CMakeLists.txt  README.md  package.xml
spider_code/spider_teleop_joy/launch/: joy.launch  joy.launch~
spider_code/spider_teleop_joy/src/: teleop_joy.cpp  teleop_joy.hpp
spider_code/urdf/: CMakeLists.txt
spider_code/urdf_parser_plugin/: package.xml
spider_control/: CMakeLists.txt  README.md  package.xml
spider_control/config/: spider_control.yaml
spider_control/launch/: spider_control.launch
spider_description/: CMakeLists.txt  README.md  package.xml
spider_description/meshes/: ofemur_r.STL  otibia_r.STL
spider_description/urdf/: spider_erle.xacro  spider_gazebo.xacro
spider_gazebo/: CMakeLists.txt  README.md  package.xml  setup.py
spider_gazebo/launch/: spider_gazebo_rviz_walking.launch
spider_gazebo/worlds/: model_push.world
spider_plugins/: CMakeLists.txt
spider_plugins/include/: diffdrive_plugin_18servos.h
spider_plugins/src/: diffdrive_plugin_18servos.cpp  maestro_leg_sub.cpp
