<?xml version="1.0"?>
<package>
  <name>spider_description</name>
  <version>0.1.0</version>
  <description>Describes Erle-Spider robot model for Gazebo</description>

  <maintainer email="javier.f3rnand3z@gmail.com">Javier Fernandez</maintainer>
  <author email="javier.f3rnand3z@gmail.com">Javier Fernandez</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/phantomx_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>


