<package>
  <name>orocos_kdl</name>
  <version>1.3.0</version>
  <description>
    This package contains a recent version of the Kinematics and Dynamics
    Library (KDL), distributed by the Orocos Project. 
  </description>
  <maintainer email="ruben@intermodalics.eu">Ruben Smits</maintainer>
  <url>http://wiki.ros.org/orocos_kdl</url>
  <license>LGPL</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>eigen-stl-containers</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>eigen-stl-containers</run_depend>
  <run_depend>pkg-config</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
